Fixes an icon placement bug on mobile and removes the link on the user's name.

--- a/app/scss/app.scss
+++ b/app/scss/app.scss
@@ -207,6 +207,13 @@ $clone-grid-columns: 12;
                         margin: 0 .5rem 0 0;
                     }
                 }
+                &:first-child {
+                    >p {
+                        >span {
+                            margin-left: .5rem;
+                        }
+                    }
+                }
                 @media #{$clone-tablet-landscape} {
                     &:first-child {
                         >p {
